--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,74 +1,81 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 h1 {
   border: bottom 2px;
 }
 
-:root{
-    --primary-color: #FFBA00;
-    --secundary-color: #FFF1CC;
-    --shadow-color: #CCC;
-    --text-color: #FFF;
+:root {
+  --primary-color: #ffba00;
+  --secundary-color: #fff1cc;
+  --shadow-color: #ccc;
+  --text-color: #fff;
 }
 
-body{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    font-family: 'karla', sans-serif;
-    position:relative;
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: "karla", sans-serif;
+  position: relative;
 }
 
-header{
-    background-color: var(--primary-color);
-    height: 70px;
-    text-align: center;
-    line-height: 70px;
-    box-shadow: 0 1px 2px var(--shadow-color);
+header {
+  background-color: var(--primary-color);
+  height: 70px;
+  text-align: center;
+  line-height: 70px;
+  box-shadow: 0 1px 2px var(--shadow-color);
 }
 
-.header-title{
-    color: black;
-    font-size: 2rem;
+.header-title {
+  color: black;
+  font-size: 2rem;
 }
 
-main{
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 90%;
-    margin: 5vh auto;
-    padding: 50px;
-    box-shadow: 2px 2px 10px var(--shadow-color);
-    gap: 20px;
+main#login, main#app{
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  margin: 5vh auto;
+  padding: 50px;
+  box-shadow: 2px 2px 10px var(--shadow-color);
+  gap: 20px;
 }
 
-footer{
-    width:100;
-    text-align: center;
-    font-weight: 200;
-    font-style: italic;
-    padding: 20px;
+.showElement {
+    display: flex
 }
 
-@media (max-width:480px){
-    header{
-        position:fixed;
-        width:100%;
-    }
-    .header-title{
-        font-size: 1.5rem;
-    }
+.hideElement {
+    display: none
+}
 
-    main{
-        padding: 0;
-        margin: 20px 0 0 0;
-        width:100%;
-        box-shadow: none;
-    }
+footer {
+  width: 100;
+  text-align: center;
+  font-weight: 200;
+  font-style: italic;
+  padding: 20px;
+}
+
+@media (max-width: 480px) {
+  header {
+    position: fixed;
+    width: 100%;
+  }
+  .header-title {
+    font-size: 1.5rem;
+  }
+
+  main {
+    padding: 0;
+    margin: 20px 0 0 0;
+    width: 100%;
+    box-shadow: none;
+  }
 }
