--- a/src/css/button.css
+++ b/src/css/button.css
@@ -25,6 +25,10 @@ button.red {
   box-shadow: inset 200px 0 0 #00000055;
 }
 
+.button:disabled {
+  background-color: gray;
+}
+
 @media (max-width: 480px) {
   .button.mobile {
     color: transparent;
