--- a/src/css/button.css
+++ b/src/css/button.css
@@ -6,18 +6,24 @@
   color: white;
   font-size: 1rem;
   cursor: pointer;
-  transition: box-shadow 0.6s ease;
+  transition: box-shadow 0.6s ease, background-color 0.25s ease;
 }
 
-.button.blue {
+a.button {
+  text-decoration: none;
+  display: grid;
+  place-items: center;
+}
+
+.blue {
   background-color: #1fb6ff;
 }
 
-button.green {
+.green {
   background-color: #13ce66;
 }
 
-button.red {
+.red {
   background-color: #ff4949;
 }
 
