--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,35 +17,59 @@ h1 {
 
 body {
   min-height: 100vh;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: min-content 1fr;
+  display: flex;
   font-family: "karla", sans-serif;
   position: relative;
+  background: grey;
 }
 
-header {
-  background-color: var(--primary-color);
-  height: 70px;
-  text-align: center;
-  line-height: 70px;
-  box-shadow: 0 1px 2px var(--shadow-color);
+.header {
+  display: grid;
+  grid: 1fr / 0.25fr 1fr;
+  width: 100%;
+  place-items: center;
 }
 
-.header-title {
-  color: black;
-  font-size: 2rem;
+main#login {
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  grid: 1fr / 1fr 1fr;
 }
 
-main#login, main#app{
+.container {
+  display: grid;
+  place-items: center;
+}
+
+.container:nth-of-type(1){
+  grid: 2fr 0.5fr / 1fr;
+}
+
+main#app{
   flex-grow: 1;
   flex-direction: column;
   align-items: flex-start;
-  width: 90%;
-  margin: 5vh auto;
+  margin: 25px;
   padding: 50px;
   box-shadow: 2px 2px 10px var(--shadow-color);
   gap: 20px;
+  display: flex;
+  background: #e4e4e4;
+  border-radius: 15px;
+}
+
+main#login form {
+  display: grid;
+  place-items: center;
+  width: 80%;
+  height: 80%;
+  box-shadow: 0 2px 2px rgba(0,0,0,0.25);
+}
+
+main#login form input {
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
 }
 
 .showElement {
